[BUGFIX] Hidden input element in form wizard almost invisible
Hidden input elements in the form wizard are not visualized at
all in the user interface. A dotted border is added to be able
to spot in the wizard.

Fixes: #28620

--- a/typo3/sysext/form/Resources/Public/CSS/Wizard/Wizard.css
+++ b/typo3/sysext/form/Resources/Public/CSS/Wizard/Wizard.css
@@ -285,14 +285,22 @@ li.formwizard-element div.buttongroup span.x-btn-over {
 	background-image: none;
 }
 
-li.formwizard-element.hover {
+li.formwizard-element.hover,
+li.formwizard-element.hidden.hover{
 	border: 1px solid #C5DBE6;
 	background-color: #F9FCFF;
 }
 
-li.formwizard-element.active {
+li.formwizard-element.active,
+li.formwizard-element.hidden.active {
 	background-color: #EAF7FF;
 	border: 1px solid #C5DBE6;
+}
+
+li.formwizard-element.hidden {
+	background-color: transparent;
+	border: 1px dotted #C5DBE6;
+	min-height: 1em;
 }
 
 li.formwizard-element.form {
